Arreglo Readme y Index

--- a/Index.html
+++ b/Index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Multiplicadores de tablas</title>
+    <title>Multiplicador de tablas</title>
 </head>
 <body>
-Pagina de Tablas
+Este es el multiplicador de tablas
 </body>
 </html>
