Principio de Pagina

--- a/Index.html
+++ b/Index.html
@@ -3,8 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <title>Multiplicador de tablas</title>
+    <meta content="Pedro Cajal" name="autor">
+    <meta content="Pagina para enseñar las tablas de multiplicar a niños" name="Descripcion">
+    <meta content="Multiplicar, Aprender, Niños, Tablas" name="Keywords">
+    <style>
+        header{
+            width: 1536px;
+            height: 100px;
+            text-align: left;
+            font-size: 35px;
+            font-family: Tahoma;
+            background: #e8a111;
+        }
+        nav{
+            text-align: left;
+            font-size: 25px;
+
+            font-family: Tahoma;
+            background: linear-gradient(to right, #ffa34b, #ffe855);
+        }
+        body{
+            background: repeating-radial-gradient(#ff7c00, #ffe705);
+            background-repeat: repeat-x;
+            background-attachment: fixed;
+            background-position: center;
+            background-size: 2750xpx;
+        }
+        img{
+            width: 85px;
+            float: left;
+            margin: 17px;
+            border-radius: 60%;
+        }
+    </style>
 </head>
 <body>
-Este es el multiplicador de tablas
+<header>
+    <div>
+        <img src="Imagenes/Simbolo%20Pagina%20Web.jpg">
+        <h1> Multiplicador De Tablas </h1>
+
+    </div>
+</header>
+<nav>
+    <h2> |  Inicio  |  Juego  |  Ayudas  |  Extras  | </h2>
+</nav>
+<article>
+    <p>
+        De Donde viene la multiplicacion
+    </p>
+    <p>
+        Que es la mutiplicacion
+    </p>
+    <p>
+        Video explicativo
+    </p>
+</article>
 </body>
 </html>
