--- a/Index.html
+++ b/Index.html
@@ -6,54 +6,29 @@
     <meta content="Pedro Cajal" name="autor">
     <meta content="Pagina para enseñar las tablas de multiplicar a niños" name="Descripcion">
     <meta content="Multiplicar, Aprender, Niños, Tablas" name="Keywords">
-    <style>
-        header{
-            width: 1536px;
-            height: 100px;
-            text-align: left;
-            font-size: 35px;
-            font-family: Tahoma;
-            background: #e8a111;
-        }
-        nav{
-            text-align: left;
-            font-size: 25px;
-
-            font-family: Tahoma;
-            background: linear-gradient(to right, #ffa34b, #ffe855);
-        }
-        body{
-            background: repeating-radial-gradient(#ff7c00, #ffe705);
-            background-repeat: repeat-x;
-            background-attachment: fixed;
-            background-position: center;
-            background-size: 2750xpx;
-        }
-        img{
-            width: 85px;
-            float: left;
-            margin: 17px;
-            border-radius: 60%;
-        }
-    </style>
+    <link rel="stylesheet" href="Estilos.css" type="text/css">
 </head>
 <body>
 <header>
-    <div>
-        <img src="Imagenes/Simbolo%20Pagina%20Web.jpg">
-        <h1> Multiplicador De Tablas </h1>
-
+    <div class="Logo">
+        <img src="Imagenes/Simbolo%20Pagina%20Web.jpg" id="FotoLogo">
+        Multiplicador de Tablas
     </div>
+    <nav>
+        <a href="#"> Inicio</a>
+        <a href="#"> Jugar</a>
+        <a href="#"> Ayudas</a>
+        <a href="#"> Extras</a>
+    </nav>
 </header>
-<nav>
-    <h2> |  Inicio  |  Juego  |  Ayudas  |  Extras  | </h2>
-</nav>
 <article>
     <p>
-        De Donde viene la multiplicacion
+    <h3> De Donde viene la multiplicacion </h3>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
     <p>
-        Que es la mutiplicacion
+    <h3> Que es la mutiplicacion </h3>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
     <p>
         Video explicativo
