Nuevas pestanas y modificaiones

--- a/Index.html
+++ b/Index.html
@@ -21,10 +21,10 @@
         Multiplicador de Tablas
     </div>
     <nav>
-        <a href="#NavInicio"> Inicio</a>
-        <a href="#NavJugar"> Jugar</a>
-        <a href="#NavAyudas"> Ayudas</a>
-        <a href="#NavExtras"> Extras</a>
+        <a href="Index.html"> Inicio</a>
+        <a href="Jugar.html"> Jugar</a>
+        <a href="Ayudas.html"> Ayudas</a>
+        <a href="Extras.html"> Extras</a>
     </nav>
 </header>
 <article class="Contenido Centrado" id="NavInicio">
