--- a/Index.html
+++ b/Index.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="Imagenes/favicon.ico" type="imagen/x-icon">
 </head>
 <body>
 <header>
