--- a/Extras.html
+++ b/Extras.html
@@ -15,7 +15,7 @@
 <header>
     <div class="Logo">
         <img src="Imagenes/Simbolo%20Pagina%20Web.jpg" id="FotoLogo">
-        Multiplicador de Tablas
+        <h1>Multiplicador de Tablas</h1>
     </div>
     <nav>
         <a href="Index.html"> Inicio</a>
