--- a/Ayudas.html
+++ b/Ayudas.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ayudas</title>
+    <title>Multiplicador de tablas</title>
     <link rel="stylesheet" href="Estilos.css" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
