--- a/Ayudas.html
+++ b/Ayudas.html
@@ -14,7 +14,7 @@
 </head>
 <header>
     <div class="Logo">
-        <img src="Imagenes/Simbolo%20Pagina%20Web.jpg" id="FotoLogo">
+        <a href="Index.html"><img src="Imagenes/Simbolo%20Pagina%20Web.jpg" id="FotoLogo"></a>
         <h1>Multiplicador de Tablas</h1>
     </div>
     <nav>
