--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Multiplicador de tablas</title>
-    <meta content="Pedro Cajal" name="autor">
+    <meta content="Pedro Cajal y Agustin Glaiel" name="autor">
     <meta content="Pagina para enseñar las tablas de multiplicar a niños" name="Descripcion">
     <meta content="Multiplicar, Aprender, Niños, Tablas" name="Keywords">
     <link rel="stylesheet" href="Estilos.css" type="text/css">
@@ -18,7 +18,7 @@
 <body>
 <header>
     <div class="Logo">
-        <img src="Imagenes/Simbolo%20Pagina%20Web.jpg" id="FotoLogo">
+        <a href="Index.html"><img src="Imagenes/Simbolo%20Pagina%20Web.jpg" id="FotoLogo"></a>
         <h1>Multiplicador de Tablas</h1>
     </div>
     <nav>
