--- a/Extras.html
+++ b/Extras.html
@@ -26,7 +26,7 @@
 </header>
 <article class="Contenido Centrado" id="NavExtras">
     <p>
-    <h1> EXTRAS </h1>
+    <!--<h1> EXTRAS </h1>-->
     <h3 class="Encabezados"> Videos Extras </h3>
     <iframe  class="VideosExtras" width="560" height="315" src="https://www.youtube.com/embed/CpBVPMBXvt4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <iframe class="VideosExtras" width="560" height="315" src="https://www.youtube.com/embed/RZj2JNlJSy0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
