--- a/Index.html
+++ b/Index.html
@@ -32,11 +32,17 @@
     <p>
     <!--<h1> INICIO </h1>-->
     <h3 class="Encabezados"> De Donde viene la multiplicacion </h3>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
+    Los primeros en usar la multiplicación fueron los egipcios, aproximadamente en el año 2700 A.C. Usaron un sistema que llamaron multiplicacion
+    por duplicación. Otra civilizacion pionera due la sumeria, en Asia menor, hacia el 2600 A.C. Inventaron las tablas de multiplicar
+    y las escribian en tablas de arcilla secadas al sol. La multiplicacion que se usa en la actualidad, fue inventada por los hindúes.
+    Finalmente, Pitágoras, filosofo griego, fue llamado desarrollador y analizador de la multiplicación. Un dato particular, es que en China,
+    la multiplicación se realizaba con varillas de bambú. Las Varillas se disponen en forma horizontal,
+    las que corresponden al multiplicando y en forma vertical las que corresponden al multiplicador. </p>
     <p>
     <h3 class="Encabezados"> Que es la mutiplicacion </h3>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    La multiplicación es una forma muy rapida de sumar el mismo numero una y otra vez. Por ejemplo, 2 x 3, podemos sumar el numero 2, tres veces (2 + 2 + 2)
+    o podemos hacerlo de forma "magica" y veloz conociendo las tablas de multiplicar. Es decir, la multiplicación es tomar un numero,
+    y sumarlo a si mismo la cantidad de veces deseadas.
     </p>
     <p>
         <h3 class="Encabezados"> Video explicativo </h3>
