--- a/Extras.html
+++ b/Extras.html
@@ -25,15 +25,16 @@
     </nav>
 </header>
 <article class="Contenido Centrado" id="NavExtras">
-    <p>
     <!--<h1> EXTRAS </h1>-->
     <h3 class="Encabezados"> Videos Extras </h3>
+    <div>
     <iframe  class="VideosExtras" width="560" height="315" src="https://www.youtube.com/embed/CpBVPMBXvt4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <iframe class="VideosExtras" width="560" height="315" src="https://www.youtube.com/embed/RZj2JNlJSy0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </p>
-    <p>
+    </div>
+    <div>
     <h3 class="Encabezados"> Links de otros juegos </h3>
-    </p>
+        <br>
+    </div>
     <ul>
         <li> <a href="https://wordwall.net/es/resource/5704578/tablas-de-multiplicar"> Pacman Multiplicador </a> </li>
         <li> <a href="https://wordwall.net/es/resource/3911426/tablas-de-multiplicar"> Tren de las Multiplicaciones </a> </li>
