--- a/Jugar.html
+++ b/Jugar.html
@@ -30,9 +30,18 @@
     <h3 class="Encabezados"> Como funciona el juego</h3>
     <br>
     <div class="ExplicacionJuego">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      A continuación se encuentra la explicación paso a paso del juego. El objetivo, es que puedas aprender
+      las tablas de multiplicar de forma dinámica y divertida, tratando de aprender de una manera distinta a la
+      tradicional.
+      <div align="center"  class="listaJuego">
+        <ol class="ReglasJuego">
+          <li>Se asignaran dos numeros al azar del 1 al 10</li>
+          <li>Deberás realizar la multiplicación de la forma mas conveniente para vos</li>
+          <li>Ingresar el resultado en la casilla asignada</li>
+          <li>Si el resultado es correcto, sumás puntos, de lo contrario, no sumarás nada</li>
+          <li>Mientras más rápido respondas, más puntos sumás</li>
+        </ol>
+      </div>
     </div>
     <div class="Boton">
       JUGAR
