--- a/Juego.html
+++ b/Juego.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Multiplicador de tablas</title>
+    <title>Juego de Multiplicación</title>
     <meta content="Pedro Cajal y Agustin Glaiel" name="autor">
     <meta content="Pagina para enseñar las tablas de multiplicar a niños" name="Descripcion">
     <meta content="Multiplicar, Aprender, Niños, Tablas" name="Keywords">
@@ -23,8 +23,8 @@
     </div>
     <nav>
         <div>
-            <p id="puntos">Puntaje:</p>
-            <p id="tiempo">Tiempo:</p>
+            Puntaje:
+            Tiempo:
         </div>
     </nav>
 </header>
