--- a/Jugar.html
+++ b/Jugar.html
@@ -43,7 +43,7 @@
         </ol>
       </div>
     </div>
-    <div class="Boton">
+    <div id="Boton" onclick="AbrirJuego()">
       JUGAR
     </div>
   </article>
