--- a/Extras.html
+++ b/Extras.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="Imagenes/favicon.ico" type="imagen/x-icon">
+    <script type="text/javascript" src="Funciones.js"></script>
 </head>
 <header>
     <div class="Logo">
