--- a/Juego.html
+++ b/Juego.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="Imagenes/favicon.ico" type="imagen/x-icon">
+    <script type="text/javascript" src="Funciones.js"></script>
 </head>
 
 <header>
