--- a/Juego.html
+++ b/Juego.html
@@ -30,11 +30,9 @@
     </nav>
 </header>
 
-
-
-
-
 <body>
-
+<canvas onload="DibujarCanvas()" width="600px" height="400px" id="Canvas" >
+    Tu navegador no soporta el Canvas
+</canvas>
 </body>
 </html>
