--- a/Juego.html
+++ b/Juego.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="Funciones.js"></script>
 </head>
 
+<body>
 <header>
     <div class="Logo">
         <a href="Index.html"><img src="Imagenes/Simbolo%20Pagina%20Web.jpg" id="FotoLogo"></a>
@@ -30,9 +31,18 @@
     </nav>
 </header>
 
-<body>
-<canvas onload="DibujarCanvas()" width="600px" height="400px" id="Canvas" >
+<article class="Numeros">
+    <h1>Multplicación</h1>
+        <p>
+            <input id="num1" type="number">
+            x
+            <input id="num2" type="number">
+            =
+            <input id="num3" type="number">
+        </p>
+</article>
+<!--<canvas onload="DibujarCanvas()" width="600px" height="400px" id="Canvas" >
     Tu navegador no soporta el Canvas
-</canvas>
+</canvas>-->
 </body>
 </html>
