--- a/Ayudas.html
+++ b/Ayudas.html
@@ -35,20 +35,18 @@
     <div align="center"><img src="Imagenes/Tablas_de_multiplicar.jpeg" id="Tablas" width="1000" height="450"></div>
     </div>
     <br>
-    <h3 class="Encabezados" > Consejos y Trucos</h3>
-    <br>
-    <div id="Consejos">
+    <!--<h3 class="Encabezados" > Consejos y Trucos</h3>
+    <br>-->
+    <!--<div id="Consejos">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-    </div>
+    </div>-->
     <h3 class="Encabezados"> Prueba </h3>
-    <br>
     <div align="center" class="Centrado Contenido Ultimo">
-    <input id="multi1" type="text" width="150" onchange="FunAyudas()">
-    X
-    <input id="multi2" type="text" onchange="FunAyudas()">
-    =
-    <span id="resultadoAyudas" type="text"></span>
+        <input id="multi1" type="text"  onchange="FunAyudas()">
+        X
+        <input id="multi2" type="text" onchange="FunAyudas()">
+        =
+        <span id="resultadoAyudas" ></span>
     </div>
 </article>
 </body>
