--- a/Ayudas.html
+++ b/Ayudas.html
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" href="Imagenes/favicon.ico" type="imagen/x-icon">
     <script type="text/javascript" src="Funciones.js"></script>
 </head>
+
 <header>
     <div class="Logo">
         <a href="Index.html"><img src="Imagenes/Simbolo%20Pagina%20Web.jpg" id="FotoLogo"></a>
@@ -25,14 +26,15 @@
         <a href="Extras.html"> Extras</a>
     </nav>
 </header>
+
 <body>
-<article class="Contenido Centrado" id="NavAyudas">
+<section class="Contenido Centrado" id="NavAyudas">
     <br>
     <!--<h1> AYUDAS </h1>-->
     <h3 class="Encabezados" > Tablas de Multiplicar</h3>
     <br>
     <div>
-    <div align="center"><img src="Imagenes/Tablas_de_multiplicar.jpeg" id="Tablas" width="1000" height="450"></div>
+        <div align="center"><img src="Imagenes/Tablas_de_multiplicar.jpeg" id="Tablas" width="1000" height="450"></div>
     </div>
     <br>
     <!--<h3 class="Encabezados" > Consejos y Trucos</h3>
@@ -48,6 +50,6 @@
         =
         <span id="resultadoAyudas" ></span>
     </div>
-</article>
+</section>
 </body>
 </html>
