--- a/Extras.html
+++ b/Extras.html
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" href="Imagenes/favicon.ico" type="imagen/x-icon">
     <script type="text/javascript" src="Funciones.js"></script>
 </head>
+
 <header>
     <div class="Logo">
         <a href="Index.html"><img src="Imagenes/Simbolo%20Pagina%20Web.jpg" id="FotoLogo"></a>
@@ -25,17 +26,19 @@
         <a href="Extras.html"> Extras</a>
     </nav>
 </header>
-<article class="Contenido Centrado" id="NavExtras">
+
+<section class="Contenido Centrado" id="NavExtras">
     <!--<h1> EXTRAS </h1>-->
     <h3 class="Encabezados"> Videos Extras </h3>
     <div>
-    <iframe  class="VideosExtras" width="560" height="315" src="https://www.youtube.com/embed/CpBVPMBXvt4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <iframe class="VideosExtras" width="560" height="315" src="https://www.youtube.com/embed/RZj2JNlJSy0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe  class="VideosExtras" width="560" height="315" src="https://www.youtube.com/embed/CpBVPMBXvt4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="VideosExtras" width="560" height="315" src="https://www.youtube.com/embed/RZj2JNlJSy0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <div>
-    <h3 class="Encabezados"> Links de otros juegos </h3>
+        <h3 class="Encabezados"> Links de otros juegos </h3>
         <br>
     </div>
+    <div class="linksVideos">
     <ul>
         <li> <a href="https://wordwall.net/es/resource/5704578/tablas-de-multiplicar"> Pacman Multiplicador </a> </li>
         <li> <a href="https://wordwall.net/es/resource/3911426/tablas-de-multiplicar"> Tren de las Multiplicaciones </a> </li>
@@ -43,5 +46,6 @@
         <li> <a href="https://www.tablasdemultiplicar.com/figo-and-friends.html"> Figo y sus Amigos </a> </li>
         <li> <a href="https://www.tablasdemultiplicar.com/rescate-de-animales.html"> Rescate de animales </a> </li>
     </ul>
-</article>
+    </div>
+</section>
 </html>
