--- a/Jugar.html
+++ b/Jugar.html
@@ -13,19 +13,22 @@
   <link rel="shortcut icon" href="Imagenes/favicon.ico" type="imagen/x-icon">
   <script type="text/javascript" src="Funciones.js"></script>
 </head>
-<header>
-  <div class="Logo">
-    <a href="Index.html"><img src="Imagenes/Simbolo%20Pagina%20Web.jpg" id="FotoLogo"></a>
-    <h1>Multiplicador de Tablas</h1>
-  </div>
-  <nav>
-    <a href="Index.html"> Inicio</a>
-    <a href="Jugar.html" > Jugar</a>
-    <a href="Ayudas.html"> Ayudas</a>
-    <a href="Extras.html"> Extras</a>
-  </nav>
-</header>
-  <article class="Contenido Centrado" id="NavJugar">
+
+<body>
+  <header>
+    <div class="Logo">
+      <a href="Index.html"><img src="Imagenes/Simbolo%20Pagina%20Web.jpg" id="FotoLogo"></a>
+      <h1>Multiplicador de Tablas</h1>
+    </div>
+    <nav>
+      <a href="Index.html"> Inicio</a>
+      <a href="Jugar.html" > Jugar</a>
+      <a href="Ayudas.html"> Ayudas</a>
+      <a href="Extras.html"> Extras</a>
+    </nav>
+  </header>
+
+  <section class="Contenido Centrado" id="NavJugar">
     <br>
     <!--<h1> JUGAR </h1>-->
     <h3 class="Encabezados"> Como funciona el juego</h3>
@@ -46,5 +49,6 @@
     <div id="Boton" onclick="AbrirJuego()">
       JUGAR
     </div>
-  </article>
+  </section>
+</body>
 </html>
