--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
     <link rel="shortcut icon" href="Imagenes/favicon.ico" type="imagen/x-icon">
     <script type="text/javascript" src="Funciones.js"></script>
 </head>
-<body>
+
 <header>
     <div class="Logo">
         <a href="Index.html"><img src="Imagenes/Simbolo%20Pagina%20Web.jpg" id="FotoLogo"></a>
@@ -29,29 +29,31 @@
         <a href="Extras.html"> Extras</a>
     </nav>
 </header>
-<article class="Contenido Centrado" id="NavInicio">
-    <h3 class="Encabezados"> De Donde viene la multiplicacion </h3>
-    <br>
-    <div class="OrigenMultiplicacion">
-    <!--<h1> INICIO </h1>-->
-    Los primeros en usar la multiplicación fueron los egipcios, aproximadamente en el año 2700 A.C. Usaron un sistema que llamaron multiplicacion
-    por duplicación. Otra civilizacion pionera due la sumeria, en Asia menor, hacia el 2600 A.C. Inventaron las tablas de multiplicar
-    y las escribian en tablas de arcilla secadas al sol. La multiplicacion que se usa en la actualidad, fue inventada por los hindúes.
-    Finalmente, Pitágoras, filosofo griego, fue llamado desarrollador y analizador de la multiplicación. Un dato particular, es que en China,
-    la multiplicación se realizaba con varillas de bambú. Las Varillas se disponen en forma horizontal,
-    las que corresponden al multiplicando y en forma vertical las que corresponden al multiplicador.
-    </div>
-    <br>
-    <h3 class="Encabezados"> Que es la mutiplicacion </h3>
-    <br>
-    <div class="OrigenMultiplicacion">
-    La multiplicación es una forma muy rapida de sumar el mismo numero una y otra vez. Por ejemplo, 2 x 3, podemos sumar el numero 2, tres veces (2 + 2 + 2)
-    o podemos hacerlo de forma "magica" y veloz conociendo las tablas de multiplicar. Es decir, la multiplicación es tomar un numero,
-    y sumarlo a si mismo la cantidad de veces deseadas.
-    </div>
-    <h3 class="Encabezados"> Video explicativo </h3>
-    <br>
-    <div align="center"> <iframe id="VideoExplicativo" width="575" height="290"  src="https://www.youtube.com/embed/YFtEaVw5k1A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-</article>
+
+<body>
+    <section class="Contenido Centrado" id="NavInicio">
+        <h3 class="Encabezados"> De Donde viene la multiplicacion </h3>
+        <br>
+        <div class="OrigenMultiplicacion">
+            <!--<h1> INICIO </h1>-->
+            Los primeros en usar la multiplicación fueron los egipcios, aproximadamente en el año 2700 A.C. Usaron un sistema que llamaron multiplicacion
+            por duplicación. Otra civilizacion pionera due la sumeria, en Asia menor, hacia el 2600 A.C. Inventaron las tablas de multiplicar
+            y las escribian en tablas de arcilla secadas al sol. La multiplicacion que se usa en la actualidad, fue inventada por los hindúes.
+            Finalmente, Pitágoras, filosofo griego, fue llamado desarrollador y analizador de la multiplicación. Un dato particular, es que en China,
+            la multiplicación se realizaba con varillas de bambú. Las Varillas se disponen en forma horizontal,
+            las que corresponden al multiplicando y en forma vertical las que corresponden al multiplicador.
+        </div>
+        <br>
+        <h3 class="Encabezados"> Que es la mutiplicacion </h3>
+        <br>
+        <div class="OrigenMultiplicacion">
+            La multiplicación es una forma muy rapida de sumar el mismo numero una y otra vez. Por ejemplo, 2 x 3, podemos sumar el numero 2, tres veces (2 + 2 + 2)
+            o podemos hacerlo de forma "magica" y veloz conociendo las tablas de multiplicar. Es decir, la multiplicación es tomar un numero,
+            y sumarlo a si mismo la cantidad de veces deseadas.
+        </div>
+        <h3 class="Encabezados"> Video explicativo </h3>
+        <br>
+        <div align="center"> <iframe id="VideoExplicativo" width="575" height="290"  src="https://www.youtube.com/embed/YFtEaVw5k1A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+    </section>
 </body>
 </html>
