--- a/Juego.html
+++ b/Juego.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+
 <header>
     <div class="Logo">
         <a href="Index.html"><img src="Imagenes/Simbolo%20Pagina%20Web.jpg" id="FotoLogo"></a>
@@ -25,22 +26,21 @@
     </div>
     <nav>
         <div>
-            Puntaje:
-            Tiempo:
+            Puntaje:<span onload="SumarPuntaje()"></span>
+            Tiempo: <span onload="Segundero()"></span>
         </div>
     </nav>
 </header>
 
-<article class="Numeros">
-    <h1>Multplicación</h1>
-        <p>
-            <input id="num1" type="number">
-            x
-            <input id="num2" type="number">
-            =
-            <input id="num3" type="number">
-        </p>
-</article>
+<h1>Multplicación</h1>
+
+<div align="center" class="Numeros">
+    <input id="num1" type="text"  onchange="FunAyudas()">
+    X
+    <input id="num2" type="text" onchange="FunAyudas()">
+    =
+    <span id="num3" ></span>
+</div>
 <!--<canvas onload="DibujarCanvas()" width="600px" height="400px" id="Canvas" >
     Tu navegador no soporta el Canvas
 </canvas>-->
