--- a/Extras.html
+++ b/Extras.html
@@ -26,26 +26,27 @@
         <a href="Extras.html"> Extras</a>
     </nav>
 </header>
-
-<section class="Contenido Centrado" id="NavExtras">
-    <!--<h1> EXTRAS </h1>-->
-    <h3 class="Encabezados"> Videos Extras </h3>
-    <div>
-        <iframe  class="VideosExtras" width="560" height="315" src="https://www.youtube.com/embed/CpBVPMBXvt4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe class="VideosExtras" width="560" height="315" src="https://www.youtube.com/embed/RZj2JNlJSy0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-    <div>
-        <h3 class="Encabezados"> Links de otros juegos </h3>
-        <br>
-    </div>
-    <div class="linksVideos">
-    <ul>
-        <li> <a href="https://wordwall.net/es/resource/5704578/tablas-de-multiplicar"> Pacman Multiplicador </a> </li>
-        <li> <a href="https://wordwall.net/es/resource/3911426/tablas-de-multiplicar"> Tren de las Multiplicaciones </a> </li>
-        <li> <a href="https://www.tablasdemultiplicar.com/my-smart-horse.html"> Carrera de caballos </a> </li>
-        <li> <a href="https://www.tablasdemultiplicar.com/figo-and-friends.html"> Figo y sus Amigos </a> </li>
-        <li> <a href="https://www.tablasdemultiplicar.com/rescate-de-animales.html"> Rescate de animales </a> </li>
-    </ul>
-    </div>
-</section>
+<body>
+    <section class="Contenido Centrado" id="NavExtras">
+        <!--<h1> EXTRAS </h1>-->
+        <h3 class="Encabezados"> Videos Extras </h3>
+        <div>
+            <iframe  class="VideosExtras" width="560" height="315" src="https://www.youtube.com/embed/CpBVPMBXvt4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="VideosExtras" width="560" height="315" src="https://www.youtube.com/embed/RZj2JNlJSy0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div>
+            <h3 class="Encabezados"> Links de otros juegos </h3>
+            <br>
+        </div>
+        <div class="linksVideos">
+            <ul>
+                <li> <a href="https://wordwall.net/es/resource/5704578/tablas-de-multiplicar"> Pacman Multiplicador </a> </li>
+                <li> <a href="https://wordwall.net/es/resource/3911426/tablas-de-multiplicar"> Tren de las Multiplicaciones </a> </li>
+                <li> <a href="https://www.tablasdemultiplicar.com/my-smart-horse.html"> Carrera de caballos </a> </li>
+                <li> <a href="https://www.tablasdemultiplicar.com/figo-and-friends.html"> Figo y sus Amigos </a> </li>
+                <li> <a href="https://www.tablasdemultiplicar.com/rescate-de-animales.html"> Rescate de animales </a> </li>
+            </ul>
+        </div>
+    </section>
+</body>
 </html>
