funciones y otras cosas

--- a/Juego.html
+++ b/Juego.html
@@ -23,9 +23,13 @@
         <h1>Juego</h1>
     </div>
     <nav>
-        <div>
-            Puntaje:<span onload="SumarPuntaje()"></span>
-            Tiempo: <span onload="Segundero()"></span>
+        <div id="puntaje_tiempo">
+            <div id="puntaje">
+                Puntaje:<span onload="SumarPuntaje()"></span>
+            </div>
+            <div id="tiempero">
+                Tiempo: <span onload="Segundero()"> </span>
+            </div>
         </div>
     </nav>
 </header>
