--- a/Juego.html
+++ b/Juego.html
@@ -22,11 +22,11 @@
     </div>
     <nav>
         <div id="puntaje_tiempo">
-            <div id="puntaje">
-                Puntaje:<span onload="SumarPuntaje()"></span>
+            <div>
+                Puntaje:<span onload="SumarPuntaje()" id="puntaje"></span>
             </div>
-            <div id="tiempero">
-                Tiempo: <span onload="Segundero()"> </span>
+            <div>
+                Tiempo: <span onload="Segundero()" id="tiempero">  </span>
             </div>
         </div>
     </nav>
