--- a/Juego.html
+++ b/Juego.html
@@ -33,13 +33,13 @@
 </header>
 
 <body>
-    <section>
+    <section onload="Juguemos()">
         <div class="Numeros">
-            <span id="num1"  onload="Juguemos()"></span>
+            <span id="num1"></span>
             X
-            <span id="num2"  onload="Juguemos()"></span>
+            <span id="num2"></span>
             =
-            <input id="num3" type="text" onload="Juguemos()">
+            <input id="num3" type="text">
         </div>
     </section>
     <!--<canvas onload="DibujarCanvas()" width="600px" height="400px" id="Canvas" >
