--- a/Ayudas.html
+++ b/Ayudas.html
@@ -34,14 +34,20 @@
         <h3 class="Encabezados" > Tablas de Multiplicar</h3>
         <br>
         <div>
-            <div align="center"><img src="Imagenes/Tablas_de_multiplicar.jpeg" id="Tablas" width="1000" height="450"></div>
+            <div align="center"><img src="Imagenes/16362.png" id="Tablas" width="1200" height="850"></div>
         </div>
         <br>
-        <!--<h3 class="Encabezados" > Consejos y Trucos</h3>
-         <br>-->
-        <!--<div id="Consejos">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </div>-->
+        <h3 class="Encabezados" > Consejos y Trucos</h3>
+         <br>
+        <div id="Consejos">
+            A la hora de realizar las multiplicaciones, en ciertos casos hay trucos o ayudas que se pueden llevar a cabo para facilitar el aprendizaje de estas,
+            Algunos de estos casos serian:
+            <ul class="ConsejosTablas" >
+                <li> La tabla del numero 2, se caracteriza por ser todos los numeros pares. Es decir, todo numero par hasta el 20(2 X 10 = 20) fa a ser parte de esta tabla</li>
+                <li> La tabla del numero 5, se caracteriza por la facilidad para aprenderla ya que a diferencia de los demas numeros, todo numero multiplicado por 5 va a terminar en 5 o 0. Es decir, como se muestra a continuacion:    5 X 1 = 5 --> 5 X 2 = 10 --> 5 X 3 = 15 --> 5 X 4 = 20 ... </li>
+                <li> La tabla del numero 9, se caracteriza porque hay un metodo muy simple para saber como es la tabla. Este metodo se basa en sumar un numero a la decena cada vez y al mismo tiempo restarle un numero a la unidad, de la siguiente forma: <img src=""> </li>
+            </ul>
+        </div>
         <h3 class="Encabezados"> Prueba </h3>
         <div align="center" class="Centrado Contenido Ultimo">
             <input id="multi1" type="text"  onchange="FunAyudas()">
