Arreglo links Extra, fotos Ayuda y Juego

--- a/Ayudas.html
+++ b/Ayudas.html
@@ -43,8 +43,8 @@
             A la hora de realizar las multiplicaciones, en ciertos casos hay trucos o ayudas que se pueden llevar a cabo para facilitar el aprendizaje de estas,
             Algunos de estos casos serian:
             <ul class="ConsejosTablas" >
-                <li> La tabla del numero 2, se caracteriza por ser todos los numeros pares. Es decir, todo numero par hasta el 20 (2 X 10 = 20) fa a ser parte de esta tabla, de la siguiente manera: <img class="FotosAyudas" src="Imagenes/Ayuda_Tabla_2.png"> </li>
-                <li> La tabla del numero 5, se caracteriza por la facilidad para aprenderla ya que a diferencia de los demas numeros, todo numero multiplicado por 5 va a terminar en 5 o 0. Es decir, de la siguiente manera: <img class="FotosAyudas" src="Imagenes/Ayuda_Tablas_5.jpg"> </li>
+                <li> La tabla del numero 2, se caracteriza por ser todos los numeros pares. Es decir, todo numero par hasta el 20 (2 X 10 = 20) fa a ser parte de esta tabla, de la siguiente manera: <img class="FotosAyudas" src="Imagenes/Tabla-del-2-Navidades-para-Primaria.jpg"> </li>
+                <li> La tabla del numero 5, se caracteriza por la facilidad para aprenderla ya que a diferencia de los demas numeros, todo numero multiplicado por 5 va a terminar en 5 o 0. Es decir, de la siguiente manera: <img class="FotosAyudas" src="Imagenes/Tabla-del-5-carnaval.jpg"> </li>
                 <li> La tabla del numero 9, se caracteriza porque hay un metodo muy simple para saber como es la tabla. Este metodo se basa en sumar un numero a la decena cada vez y al mismo tiempo restarle un numero a la unidad, de la siguiente forma: <img class="FotosAyudas" src="Imagenes/Ayuda_Tablas_9.png"> </li>
             </ul>
         </div>
