--- a/Extras.html
+++ b/Extras.html
@@ -38,13 +38,13 @@
             <h3 class="Encabezados"> Links de otros juegos </h3>
             <br>
         </div>
-        <div class="linksVideos">
+        <div id="Fondo">
             <ul>
-                <li> <a href="https://wordwall.net/es/resource/5704578/tablas-de-multiplicar"> Pacman Multiplicador </a> </li>
-                <li> <a href="https://wordwall.net/es/resource/3911426/tablas-de-multiplicar"> Tren de las Multiplicaciones </a> </li>
-                <li> <a href="https://www.tablasdemultiplicar.com/my-smart-horse.html"> Carrera de caballos </a> </li>
-                <li> <a href="https://www.tablasdemultiplicar.com/figo-and-friends.html"> Figo y sus Amigos </a> </li>
-                <li> <a href="https://www.tablasdemultiplicar.com/rescate-de-animales.html"> Rescate de animales </a> </li>
+                <li> <a href="https://wordwall.net/es/resource/5704578/tablas-de-multiplicar" class="linksVideos"> Pacman Multiplicador </a> </li>
+                <li> <a href="https://wordwall.net/es/resource/3911426/tablas-de-multiplicar" class="linksVideos"> Tren de las Multiplicaciones </a> </li>
+                <li> <a href="https://www.tablasdemultiplicar.com/my-smart-horse.html" class="linksVideos"> Carrera de caballos </a> </li>
+                <li> <a href="https://www.tablasdemultiplicar.com/figo-and-friends.html" class="linksVideos"> Figo y sus Amigos </a> </li>
+                <li> <a href="https://www.tablasdemultiplicar.com/rescate-de-animales.html" class="linksVideos"> Rescate de animales </a> </li>
             </ul>
         </div>
     </section>
