--- a/Juego.html
+++ b/Juego.html
@@ -33,12 +33,13 @@
 </header>
 
 <body>
+<h3 class="Contenido CenJuego Encabezados">Escribir la respuesta correcta a la siguiente multiplicacion:</h3>
     <section onload="Juguemos()">
         <div class="Numeros">
             <span id="num1"></span>
-            X
+             X
             <span id="num2"></span>
-            =
+             =
             <input id="num3" type="text">
         </div>
     </section>
