Alts fotos, correcciones ortografia y readme

--- a/Ayudas.html
+++ b/Ayudas.html
@@ -34,7 +34,7 @@
         <h3 class="Encabezados" > Tablas de Multiplicar</h3>
         <br>
         <div>
-            <div align="center"><img src="Imagenes/16362.png" id="Tablas" width="1200" height="850"></div>
+            <div align="center"><img src="Imagenes/16362.png" id="Tablas" width="1200" height="850" alt="Tablas del 1 al 10"></div>
         </div>
         <br>
         <h3 class="Encabezados" > Consejos y Trucos</h3>
@@ -43,16 +43,16 @@
             A la hora de realizar las multiplicaciones, en ciertos casos hay trucos o ayudas que se pueden llevar a cabo para facilitar el aprendizaje de estas,
             Algunos de estos casos serian:
             <ul class="ConsejosTablas" >
-                <li> La tabla del numero 2, se caracteriza por ser todos los numeros pares. Es decir, todo numero par hasta el 20 (2 X 10 = 20) fa a ser parte de esta tabla, de la siguiente manera: <img class="FotosAyudas" src="Imagenes/Tabla-del-2-Navidades-para-Primaria.jpg"> </li>
-                <li> La tabla del numero 5, se caracteriza por la facilidad para aprenderla ya que a diferencia de los demas numeros, todo numero multiplicado por 5 va a terminar en 5 o 0. Es decir, de la siguiente manera: <img class="FotosAyudas" src="Imagenes/Tabla-del-5-carnaval.jpg"> </li>
-                <li> La tabla del numero 9, se caracteriza porque hay un metodo muy simple para saber como es la tabla. Este metodo se basa en sumar un numero a la decena cada vez y al mismo tiempo restarle un numero a la unidad, de la siguiente forma: <img class="FotosAyudas" src="Imagenes/Ayuda_Tablas_9.png"> </li>
+                <li> La tabla del número 2, se caracteriza por ser todos los números pares. Es decir, todo número par hasta el 20 (2 X 10 = 20) fa a ser parte de esta tabla, de la siguiente manera: <img class="FotosAyudas" src="Imagenes/Tabla-del-2-Navidades-para-Primaria.jpg" alt="Tabla del 2"> </li>
+                <li> La tabla del número 5, se caracteriza por la facilidad para aprenderla ya que a diferencia de los demás números, todo número multiplicado por 5 va a terminar en 5 o 0. Es decir, de la siguiente manera: <img class="FotosAyudas" src="Imagenes/Tabla-del-5-carnaval.jpg" alt="Tabla del 5"> </li>
+                <li> La tabla del número 9, se caracteriza porque hay un método muy simple para saber como es la tabla. Este método se basa en sumar un número a la decena cada vez y al mismo tiempo restarle un número a la unidad, de la siguiente forma: <img class="FotosAyudas" src="Imagenes/Ayuda_Tablas_9.png" alt="Ayuda tabla del 9"> </li>
             </ul>
         </div>
         <h3 class="Encabezados"> Prueba </h3>
         <div align="center" class="Centrado Contenido Ultimo">
-            <input id="multi1" type="text"  onchange="FunAyudas()">
+            <input id="multi1" type="text" placeholder="Primer Numero"  onchange="FunAyudas()">
             X
-            <input id="multi2" type="text" onchange="FunAyudas()">
+            <input id="multi2" type="text" placeholder="Segundo Numero" onchange="FunAyudas()">
             =
             <span id="resultadoAyudas" ></span>
         </div>
