--- a/Juego.html
+++ b/Juego.html
@@ -33,7 +33,7 @@
 </header>
 
 <body>
-<h3 class="Contenido CenJuego Encabezados">Escribir la respuesta correcta a la siguiente multiplicacion:</h3>
+<h3 class="Contenido CenJuego Encabezados">Escribir la respuesta correcta a la siguiente multiplicación:</h3>
     <section onload="Juguemos()">
         <div class="Numeros">
             <span id="num1"></span>
