--- a/Index.html
+++ b/Index.html
@@ -36,20 +36,21 @@
         <br>
         <div class="OrigenMultiplicacion">
             <!--<h1> INICIO </h1>-->
-            Los primeros en usar la multiplicación fueron los egipcios, aproximadamente en el año 2700 A.C. Usaron un sistema que llamaron multiplicacion
-            por duplicación. Otra civilizacion pionera due la sumeria, en Asia menor, hacia el 2600 A.C. Inventaron las tablas de multiplicar
-            y las escribian en tablas de arcilla secadas al sol. La multiplicacion que se usa en la actualidad, fue inventada por los hindúes.
-            Finalmente, Pitágoras, filosofo griego, fue llamado desarrollador y analizador de la multiplicación. Un dato particular, es que en China,
-            la multiplicación se realizaba con varillas de bambú. Las Varillas se disponen en forma horizontal,
+            Los primeros en usar la multiplicación fueron los egipcios, aproximadamente en el año 2700 A.C. Usaron un sistema que llamaron multiplicación
+            por duplicación. Otra civilización pionera fue la sumeria, en Asia menor, hacia el 2600 A.C. Inventaron las tablas de multiplicar
+            y las escribían en tablas de arcilla secadas al sol. La multiplicación que se usa en la actualidad, fue inventada por los hindúes.
+            Fin
+            Especialmente, Pitágoras, filósofo griego, fue llamado desarrollador y analizador de la multiplicación. Un dato particular, es que en China,
+            La multiplicación se realizaba con varillas de bambú. Las Varillas se disponen en forma horizontal,
             las que corresponden al multiplicando y en forma vertical las que corresponden al multiplicador.
         </div>
         <br>
         <h3 class="Encabezados"> Que es la mutiplicacion </h3>
         <br>
         <div class="OrigenMultiplicacion">
-            La multiplicación es una forma muy rapida de sumar el mismo numero una y otra vez. Por ejemplo, 2 x 3, podemos sumar el numero 2, tres veces (2 + 2 + 2)
-            o podemos hacerlo de forma "magica" y veloz conociendo las tablas de multiplicar. Es decir, la multiplicación es tomar un numero,
-            y sumarlo a si mismo la cantidad de veces deseadas.
+            La multiplicación es una forma muy rápida de sumar el mismo número una y otra vez. Por ejemplo, 2 x 3, podemos sumar el número 2, tres veces (2 + 2 + 2)
+            No podemos hacerlo de forma "mágica" y veloz conociendo las tablas de multiplicar. Es decir, la multiplicación es tomar un número,
+            y sumarlo a sí mismo la cantidad de veces deseadas.
         </div>
         <h3 class="Encabezados"> Video explicativo </h3>
         <br>
