--- a/Jugar.html
+++ b/Jugar.html
@@ -39,8 +39,8 @@
       tradicional.
       <div align="center"  class="listaJuego">
         <ol class="ReglasJuego">
-          <li>Se asignaran dos numeros al azar del 1 al 10</li>
-          <li>Deberás realizar la multiplicación de la forma mas conveniente para vos</li>
+          <li>Se asignaran dos números al azar del 1 al 10</li>
+          <li>Deberás realizar la multiplicación de la forma más conveniente para vos</li>
           <li>Ingresar el resultado en la casilla asignada</li>
           <li>Si el resultado es correcto, sumás puntos, de lo contrario, no sumarás nada</li>
         </ol>
