--- a/Juego.html
+++ b/Juego.html
@@ -32,7 +32,7 @@
     </nav>
 </header>
 
-<body onload="Segundero(); Juguemos()">
+<body class="FondoJuego" onload="Segundero(); Juguemos()">
 <h3 class="Contenido CenJuego Encabezados">Escribir la respuesta correcta a la siguiente multiplicación:</h3>
     <section>
         <div class="Numeros">
